------------------------------------------------------------------------
r1719 | gaser | 2020-09-16 17:45:15

Changed paths:
M       CHANGES.txt
M       cat_main1639.m
M       cat_main_reportfig.m
M       cat_surf_createCS.m
M       cat_surf_fun.m

(1) Changed: Preveiw surfaces and surf/fast folder are now deleted after report.
(2) Changed: Commented out call to saveico in cat_surf_createCS for fast track.
------------------------------------------------------------------------
r1718 | gaser | 2020-09-16 15:59:35 +0200 (Mi, 16 Sep 2020) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
M       cat_long_createTPM.m
M       cat_stat_spm2x.m
M       html/cat_statistics.html

(1) Changed: Added conversion to z-image to cat_stat_spm2x.m
(2) Fixed:   Changed criteria to compare voxel sizes in cat_long_createTPM.m to
             prevent rounding issues. 

------------------------------------------------------------------------
r1717 | gaser | 2020-09-14 13:06:18 +0200 (Mo, 14 Sep 2020) | 14 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_spm_results_ui.m
MM      development/cat_vol_multiply.m
 M      development/y_colin27_t1_tal_hires.nii
 M      development/y_mni_icbm152_t1_tal_nlin_asym_09c.nii
M       html/cat.html
 M      templates_volumes/julichbrain.csv
 M      templates_volumes/julichbrain.nii
MM      templates_volumes/julichbrain.txt

Fixed:  Corrected call to tfce_list and spm_list in cat_spm_results_ui.m.

------------------------------------------------------------------------
r1716 | gaser | 2020-09-11 22:22:01 +0200 (Fr, 11 Sep 2020) | 19 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_io_writenii.m
M       cat_long_main.m
M       cat_stat_analyze_ROIs.m
M       cat_stat_check_SPM.m
M       html/cat.html
M       html/cat_methods_RBM.html

(1) Fixed:  Corrected link to julichbrain-files in htlm documentation.
(2) Fixed:  Corrected call of rectangle command (thanks to James Ford for