@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1719 | gaser | 2020-09-16 17:45:15
+r1720 | gaser | 2020-09-21 11:06:07
+
+Changed paths:
+M       CHANGES.txt
+M       Contents.m
+M       Makefile
+M       html/cat.html
+
+Changed: Renamed RC2 to final CAT12.7.
+------------------------------------------------------------------------
+r1719 | gaser | 2020-09-16 17:45:20 +0200 (Mi, 16 Sep 2020) | 10 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -10,6 +20,7 @@ M       cat_surf_fun.m
 
 (1) Changed: Preveiw surfaces and surf/fast folder are now deleted after report.
 (2) Changed: Commented out call to saveico in cat_surf_createCS for fast track.
+
 ------------------------------------------------------------------------
 r1718 | gaser | 2020-09-16 15:59:35 +0200 (Mi, 16 Sep 2020) | 11 lines
 
